force-app/main/default/objects/MDF_Request__c/MDF_Request__c.object-meta.xml
<CustomObject>
    <label>MDF Request</label>
    <nameField>
        <label>MDF Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MDF Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>