force-app/main/default/objects/MDF_Request__c/fields/Activity_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_End_Date__c</fullName>
    <description>End date for the MDF-funded activity.</description>
    <label>Activity End Date</label>
    <type>Date</type>
</CustomField>