force-app/main/default/objects/MDF_Request__c/fields/Activity_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_Start_Date__c</fullName>
    <description>Start date for the MDF-funded activity.</description>
    <label>Activity Start Date</label>
    <type>Date</type>
</CustomField>