force-app/main/default/objects/MDF_Request__c/fields/Actual_Leads__c.field-meta.xml
<CustomField>
    <fullName>Actual_Leads__c</fullName>
    <label>Actual Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>