force-app/main/default/objects/MDF_Request__c/fields/Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approval_Comments__c</fullName>
    <description>Approval review comments for the MDF request.</description>
    <label>Approval Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>