force-app/main/default/objects/MDF_Request__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User responsible for approving the MDF request.</description>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approved_MDF_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>