force-app/main/default/objects/MDF_Request__c/fields/Budget_Period__c.field-meta.xml
<CustomField>
    <fullName>Budget_Period__c</fullName>
    <description>Budget period associated with the MDF request.</description>
    <label>Budget Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>