force-app/main/default/objects/MDF_Request__c/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <description>Campaign name for the MDF-funded activity.</description>
    <label>Campaign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>