force-app/main/default/objects/MDF_Request__c/fields/Eligible_Amount__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Amount__c</fullName>
    <description>Eligible funding ceiling computed at submission from the
  tenant's industry-scoped MDF_Calculation_Rule__mdt configuration. Null if
  no rule matched - informational only, doesn't block submission; a
  reviewer approving above this amount needs the same MDF budget override
  authority as exceeding the account's annual budget.</description>
    <label>Eligible Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>