force-app/main/default/objects/MDF_Request__c/fields/MDF_Request_Number__c.field-meta.xml
<CustomField>
    <fullName>MDF_Request_Number__c</fullName>
    <description
  >Auto-generated MDF request number for tracking and external display.</description>
    <displayFormat>MDF-{000000}</displayFormat>
    <label>MDF Request Number</label>
    <type>AutoNumber</type>
</CustomField>