force-app/main/default/objects/MDF_Request__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Partner account submitting the MDF request.</description>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>MDF_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>