force-app/main/default/objects/MDF_Request__c/fields/Proof_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Proof_Submitted_Date__c</fullName>
    <description>Date when proof of performance was submitted.</description>
    <label>Proof Submitted Date</label>
    <type>Date</type>
</CustomField>