force-app/main/default/objects/MDF_Request__c/fields/Reimbursement_Status__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Status__c</fullName>
    <description>Current reimbursement status for the MDF request.</description>
    <label>Reimbursement Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>