force-app/main/default/objects/MDF_Request__c/fields/Return_Reason__c.field-meta.xml
<CustomField>
    <fullName>Return_Reason__c</fullName>
    <description>Reason the pre-approval chain sent this request back for
  correction, set by ApprovalReturnConsumerService when the approval plan is
  Returned. Distinct from Approval_Comments__c, which is the final
  reviewer's decision notes.</description>
    <label>Return Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>