force-app/main/default/objects/MDF_Request__c/fields/Spent_Amount__c.field-meta.xml
<CustomField>
    <fullName>Spent_Amount__c</fullName>
    <description>Actual amount spent for the MDF activity.</description>
    <label>Spent Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>