force-app/main/default/objects/MDF_Request__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Partner contact who submitted the MDF request.</description>
    <label>Submitted By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Submitted_MDF_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>